config/v1/envoy.yaml
---
admin:
  access_log_path: /var/log/envoy/admin_access.log
  address:
    socket_address: {address: "127.0.0.1", port_value: 15000}

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: {address: "0.0.0.0", port_value: 15001}
      listener_filters:
        name: envoy.listener.original_dst
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: original
                  virtual_hosts:
                    - name: original
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route: {cluster: original}
                http_filters:
                  - name: envoy.router
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /var/log/envoy/access.log
  clusters:
    - name: original
      type: original_dst
      lb_policy: original_dst_lb
      connect_timeout: 5s
